
     - Support async keep-alive in Protocols.HTTP.Query. Fixes [bug 7143].

Protocols.SMTP: send_message() now punicodes the hostname.

        Potential fix for [bug 6531].

Protocols.SNMP: Fixed error in GetRequest variable bindings.

        The variable value should be ASN1 "Null" rather than a bogus integer.
        C.f. RFC 1905 section #3.

Sql.rsql: 

    - Implemented generic proxy of functions.

    - Implemented support for all big_query() variants.

    - This implements support for big_typed_query(), streaming_query()
            and streaming_typed_query().

    - Implement {get,set}_charset().

    - Default to not reconnect on broken connection.

        This behaviour is in line with the other SQL modules,
        and is necessary to avoid corruption due to lost state.

    - Implement ping() API.

        ping() now signals if any part of the connection was reconnected (1),
        or has been broken (-1).

    - Fix reconnect code.

        The state-machine on the client side when the rsqld server
        died was broken in several ways. It now seems to work.

    - Implemented insert_id().

SSL:

    - Attempt to protect against some timing attacks.

        Move around some code and attempt to get it to execute in constant time.
        This is in an attempt to alleviate the "Lucky Thirteen" TLS attack.

    - sslfile: Avoid rescheduling the ssl_read_callback on no read_callback.

        This could lead to call_out loops taking 100% cpu, since no data would 
        be read from the read_buffer.

        Potential fix for [bug 6582].

    - sslfile: Added linger().

        Implemented linger() API. The linger time is propagated to the raw
        socket, and additionally a linger time of zero inhibits sending of
        the close packet.

Stdio: 

    - cp() detects ouroboros and avoids infinite loops and file truncation.

    - Reduce number of system calls in mkdirhier().
